# evi-crypto

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  NOTICE  README.md  pyproject.toml
.github/workflows/: pr.yml
c_api/: CMakeLists.txt
c_api/src/: common.cpp  context.cpp  decryptor.cpp  encryptor.cpp  keygenerator.cpp  keypack.cpp  message.cpp  query.cpp  search_result.cpp  secret_key.cpp
c_api/test/: context_test.c  encdec_test.c  keygenerator_test.c  keypack_test.c  test_runner.c  test_utils.h
cmake/: BuildType.cmake  CCache.cmake  CPM.cmake  Config.cmake.in  LTO.cmake  Version.hpp.in  launch-cuda  launch-cuda.in  launch-cxx.in
conda/: evi-crypto-dev-cuda.yml  evi-crypto-dev.yml
docker/c_api/: Dockerfile
examples/: CMakeLists.txt  keygen.cpp  km_kp.cpp  poison.h  sampler-benchmark.cpp  sampler-constant-time.cpp
include/EVI/: Context.hpp  Decryptor.hpp  Encryptor.hpp  Enums.hpp  Export.hpp  KeyGenerator.hpp  KeyPack.hpp  Message.hpp  Query.hpp  SealInfo.hpp  SearchResult.hpp  SecretKey.hpp  Utils.hpp
include/EVI/impl/: Basic.cuh  CKKSTypes.hpp  DataImpl.hpp  EncryptorImpl.hpp  KeyGeneratorImpl.hpp  KeyPackImpl.hpp  Parameter.hpp  SecretKeyImpl.hpp  Type.hpp
include/km/: Enums.hpp  KeyEnvelope.hpp  KeyManager.hpp  KeyManagerInterface.hpp  KeyProviderInterface.hpp  ProviderMeta.hpp
include/km/impl/: KeyManagerImpl.hpp  KeyProviderImpl.hpp
include/utils/: DebUtils.hpp  Exceptions.hpp  Utils.hpp  span.hpp
include/utils/crypto/: AES.hpp
pybind/: CMakeLists.txt  bind_context.cpp  bind_decryptor.cpp  bind_encryptor.cpp  bind_key_generator.cpp  bind_key_manager.cpp  bind_keypack.cpp  bind_types.cpp  bind_utils.cpp  module.cpp
pybind/test/: conftest.py  context_test.py  decryptor_test.py  encryptor_test.py  keygenerator_test.py  keymanager_test.py  keypack_test.py  seckey_test.py  types_test.py
scripts/: build_manylinux.sh
src/: CKKSTypes.cpp  Context.cpp  ContextImpl.cpp  DebUtils.cpp  Decryptor.cpp  DecryptorImpl.cpp  Encryptor.cpp  EncryptorImpl.cpp  KeyGenerator.cpp  KeyGeneratorImpl.cpp  KeyPack.cpp  KeyPackImpl.cpp  Message.cpp  NTT.cpp  Profiler.cpp  Query.cpp  Sampler.cpp  SealInfo.cpp  SearchResult.cpp  SecretKey.cpp  SecretKeyImpl.cpp  Utils.cpp
src/crypto/: AES.cpp  HSMWrapper.cpp  TEEWrapper.cpp
src/km/: KeyManager.cpp  KeyManagerImpl.cpp  KeyProviderImpl.cpp
test/: CMakeLists.txt  ContextTest.cpp  EnDecryptTest.cpp  KeyManagementTest.cpp  KeyValidationTest.cpp  utils.cpp  utils.hpp
tools/: README.md  clang-tidy-diff  conda_env.sh  run-clang-tidy.sh  run-memory-check.sh
